# multiagent-system-finance

./: .env.example  .gitignore  README.md  RUN_AND_DEPLOY.md  dashboard.py  pyproject.toml  requirements.txt
mas/: __init__.py  config.py
mas/agents/: __init__.py  base.py  debate.py  ensemble.py  multi.py  single.py
mas/baselines/: __init__.py  lexicon.py  tfidf_logreg.py  transformer.py
mas/data/: __init__.py  fnspid.py  loader.py  preprocessing.py  sp500_universe.py
mas/evaluation/: __init__.py  metrics.py  statistical.py
scripts/: benchmark_transformers.py  build_fiqa_cache.py  build_phrasebank_cache.py  build_semeval_cache.py  calibration_analysis.py  calibration_selective_disagreement.py  cross_dataset_analysis.py  downstream_metrics.py  downstream_signal_test.py  error_analysis.py  fetch_fnspid_prices.py  fit_fintwitbert_agent.py  make_downstream_figures.py  patch_fnspid_predictions.py  refit_five_agent_stack.py  refresh_all_results_from_cache.py  refresh_twitter_lexicon.py  regen_lexicon_cache.py  regen_predictions_and_stats.py  run_all_phases.py  run_fintwit_on_fnspid.py  run_phase1_classical.py  run_phase2_transformer_llm.py  run_phase3_multi_agent.py  run_phase4_debate_ablation.py  xgboost_meta_comparison.py  xgboost_meta_tuned.py
