[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mas-sentiment"
version = "0.1.0"
description = "Multi-Agent System for Social Data (Crypto News) Sentiment Analysis"
requires-python = ">=3.11"
dependencies = [
    "scikit-learn>=1.4",
    "datasets>=2.18",
    "pandas>=2.2",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
    "scipy>=1.11",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
transformers = [
    "transformers>=4.38",
    "torch>=2.2",
    "accelerate>=0.27",
]
agents = [
    "openai>=1.12",
    "langgraph>=0.2",
    "langchain-openai>=0.1",
    "langchain-core>=0.2",
]
rag = [
    "chromadb>=0.4",
    "sentence-transformers>=2.5",
]
ensemble = [
    "xgboost>=2.0",
    "shap>=0.44",
]
viz = [
    "python-pptx>=0.6.21",
    "streamlit>=1.31",
]
downstream = [
    "yfinance>=0.2",
    "pyarrow>=14",
    "requests>=2.31",
]
all = [
    "mas-sentiment[transformers,agents,rag,ensemble,viz,downstream]",
]

[tool.setuptools.packages.find]
include = ["mas*"]
